@@ -1,3 +1,8 @@
+2004-04-26  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* gnomine.c (about): Fix up the credits to include Richard's and
+	Steve's contributions.
+
 2004-03-06  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* gnomine.c:
